Refactoring and optimize import

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,8 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
-    <string name="read">Read</string>
     <string name="currently_read">Currently Read</string>
     <string name="current">Current</string>
+    <string name="wtr">Want To Reads</string>
+    <string name="read">Read</string>
 </resources>
